--- a/whack a mole/project.html
+++ b/whack a mole/project.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html charset="utf-8">
   <head>
   </head>
   <body>
@@ -20,6 +20,7 @@
     <img src="img/moleLevel0.png" style="background-color: #cccccc;" alt="C3" id="C3" width="100" height="100" onclick="Whack(2,2,'C3')">
     <p id="gameover"></p>
     <script src="../js/jquery-3.6.0.js"></script>
+    <script src="builder.js"></script>
     <script src="projectscript.js"></script>
   </body>
 </html>
