--- a/whack a mole/test/test.html
+++ b/whack a mole/test/test.html
@@ -5,8 +5,8 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="builder.js"></script>
-  <script src="projectscript.js"></script>
+  <script src="../source/builder.js"></script>
+  <script src="../source/projectscript.js"></script>
   <script src="https://code.jquery.com/qunit/qunit-2.19.1.js"></script>
   <script src="test.js"></script>
 </body>
