fix curve add color img background

--- a/whack a mole/source/project.html
+++ b/whack a mole/source/project.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <p>Welcome to Whack-a-Mole, This game plays a bit differently, the later you bonk, the more points you gain! but if you wait too long you will lose the game!</p>
-    <p>Please choose a difficulty for the game to start!</p>
+    <p>Please choose a difficulty for the game to start! The difficulty increases the speed but also increases the amount of points you gain!</p>
 
     <input type="button" id="easy" name="Easy" value="Easy" onclick="startGame(1)">
 
